# autoresearch-rocm

./: README.md  backend.py  prepare.py  program.md  pyproject.toml  train.py
